BUILD.log
--------------- Build Started: 05/26/2025 22:59:19 Project: HCM_UPBDrive, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
The code generation step is up to date.
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/can_comm.lst -g -D DEBUG -Wall -ffunction-sections -ffat-lto-objects -Og -c src\can_comm.c -o .\CortexM3\ARM_GCC_541\Debug\can_comm.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/hybrid_mode.lst -g -D DEBUG -Wall -ffunction-sections -ffat-lto-objects -Og -c src\hybrid_mode.c -o .\CortexM3\ARM_GCC_541\Debug\hybrid_mode.o
src\hybrid_mode.c: In function 'Set_Strategy_Off':
src\hybrid_mode.c:38:33: error: expected expression before ';' token
     hybrid_state.driving_mode = ;
                                 ^
src\hybrid_mode.c:39:42: error: expected expression before ';' token
     hybrid_state.duty_cycle_percentage = ;
                                          ^
src\hybrid_mode.c: In function 'Set_Strategy_Manual':
src\hybrid_mode.c:44:33: error: expected expression before ';' token
     hybrid_state.driving_mode = ;
                                 ^
src\hybrid_mode.c:45:42: error: expected expression before ';' token
     hybrid_state.duty_cycle_percentage = ;
                                          ^
src\hybrid_mode.c: In function 'Set_Strategy_Launch_Assist':
src\hybrid_mode.c:50:33: error: expected expression before ';' token
     hybrid_state.driving_mode = ;
                                 ^
src\hybrid_mode.c:51:42: error: expected expression before ';' token
     hybrid_state.duty_cycle_percentage = ;
                                          ^
src\hybrid_mode.c: In function 'Set_Strategy_Auto_No_Regen':
src\hybrid_mode.c:56:33: error: expected expression before ';' token
     hybrid_state.driving_mode = ;
                                 ^
src\hybrid_mode.c:57:42: error: expected expression before ';' token
     hybrid_state.duty_cycle_percentage = ;
                                          ^
src\hybrid_mode.c: In function 'Set_Strategy_Auto_Brake_Regen':
src\hybrid_mode.c:62:33: error: expected expression before ';' token
     hybrid_state.driving_mode = ;
                                 ^
src\hybrid_mode.c:63:42: error: expected expression before ';' token
     hybrid_state.duty_cycle_percentage = ;
                                          ^
src\hybrid_mode.c: In function 'Set_Strategy_Auto_Always_Regen':
src\hybrid_mode.c:68:33: error: expected expression before ';' token
     hybrid_state.driving_mode = ;
                                 ^
src\hybrid_mode.c:69:42: error: expected expression before ';' token
     hybrid_state.duty_cycle_percentage = ;
                                          ^
src\hybrid_mode.c: In function 'Set_Strategy_Torque_Fill':
src\hybrid_mode.c:74:33: error: expected expression before ';' token
     hybrid_state.driving_mode = ;
                                 ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
src\hybrid_mode.c:75:42: error: expected expression before ';' token
     hybrid_state.duty_cycle_percentage = ;
                                          ^
--------------- Build Failed: 05/26/2025 22:59:20 ---------------
